# ota_flasher

./: Cargo.toml  Makefile
.cargo/: config.toml
src/: downloader.rs  lib.rs  uploader.rs
